# minimal_zephyr

./: run.sh
minimal_app/: CMakeLists.txt
minimal_app/src/: main.c
minimal_zephyr/: CMakeLists.txt  README.md
minimal_zephyr/arch/arm/core/: startup.c  system_clock.c  vector_table.c
minimal_zephyr/arch/riscv/core/: startup.c
minimal_zephyr/boards/mps2_an385/: board.cmake  linker.ld
minimal_zephyr/boards/qemu_riscv32/: board.cmake  linker.ld
minimal_zephyr/cmake/modules/: minimal_default.cmake  minimal_linker.cmake  minimal_package.cmake  minimal_toolchain.cmake
minimal_zephyr/cmake/toolchains/: arm.cmake  riscv.cmake
minimal_zephyr/drivers/: console.c
minimal_zephyr/include/: console.h  minimal_zephyr.h
minimal_zephyr/include/arch/arm/: semihosting.h
minimal_zephyr/include/arch/arm/cortex_m/: cmsis.h
minimal_zephyr/include/arch/arm/drivers/: uart.h
minimal_zephyr/include/arch/riscv/drivers/: uart.h
minimal_zephyr/share/minimal-zephyr/cmake/: MinimalZephyrConfig.cmake
minimal_zephyr/src/: main.c
